log
Fri Mar 26 19:30:41 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:10: error: variable ‘Lista’ set but not used [-Werror=unused-but-set-variable]
   List * Lista;
          ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:30:58 UTC 2021: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:9: error: variable ‘Lista’ set but not used [-Werror=unused-but-set-variable]
   List *Lista;
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
Fri Mar 26 19:39:42 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ee3cec2
Sun Mar 28 23:04:03 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
79cfc69
Sun Mar 28 23:57:15 UTC 2021: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7d95d3b
Mon Mar 29 23:49:32 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2a1cb92
Mon Mar 29 23:50:36 UTC 2021: 
 list.c | 5 +----
 1 file changed, 1 insertion(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
9f26b3a
Tue Mar 30 02:43:15 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
dcae5b7
Tue Mar 30 03:02:06 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
3567e55
Tue Mar 30 03:06:14 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
7bee219
Tue Mar 30 03:14:24 UTC 2021: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
0425bfd
Tue Mar 30 05:11:04 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
363506e
Tue Mar 30 05:13:16 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|5
total_score: 15/70
be6f32b
Tue Mar 30 05:14:11 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
8ca51ee
Tue Mar 30 05:15:21 UTC 2021: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
dd5b961
Tue Mar 30 05:15:38 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
fef5735
Tue Mar 30 05:16:03 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6617aa8
Tue Mar 30 05:19:10 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
be1f551
Tue Mar 30 05:19:22 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b96f3f7
Tue Mar 30 05:20:05 UTC 2021: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
e7c2728
Tue Mar 30 05:21:48 UTC 2021: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  2|5
total_score: 15/70
29ad021
Tue Mar 30 05:22:21 UTC 2021: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
9cf38f9
